--- a/bom-front/src/index.html
+++ b/bom-front/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <script async defer src="https://apis.google.com/js/api.js"></script>
   <app-root></app-root>
 </body>
 </html>
